# rust_axum_duckdb

./: Cargo.toml  coba_mahasiswa_exp.parquet  data_mahasiswa.parquet  encr_data_mahasiswa.parquet  mahasiswadb.db  mahasiswadb.db.wal
src/: db.rs  guard.rs  handlers.rs  jwt.rs  main.rs  minio_client.rs  minio_handlers.rs  minio_models.rs  models.rs  response_model.rs  router.rs  user_handler.rs
src/parquet/: coba_mahasiswa_exp.parquet  coba_mahasiswa_exp_encrpt256.parquet
