[package]
name = "axum_learn_duckdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header", "multipart"] }
bcrypt = "0.15.1"
chrono = "0.4.38"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
duckdb = "0.10.2"
hyper = { version = "1.3.1", features = ["full"] }
jsonwebtoken = "9.3.0"
minio = "0.1.0"
parquet = { version = "52.0.0", features = ["async", "arrow"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
serde_json = "1.0.117"
sqlx = "0.7.4"
tokio = { version = "1.37.0", features = ["full"] }